--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,23 @@
+server.servlet.context-path= /bank
+server.port= 8080
 
+spring.application.name = zupbankmanagerexample  
+
+spring.datasource.driverClassName = org.postgresql.Driver
+spring.datasource.url=jdbc:postgresql://localhost:5432/postgres
+spring.datasource.username = postgres
+spring.datasource.password = postgres
+spring.main.allow-bean-definition-overriding=true
+spring.datasource.testOnBorrow = true
+spring.datasource.testWhileIdle = true
+spring.datasource.timeBetweenEvictionRunsMillis = 60000
+spring.datasource.minEvictableIdleTimeMillis = 30000
+spring.datasource.validationQuery = SELECT 1
+spring.datasource.max-active = 15
+spring.datasource.max-idle = 10
+spring.datasource.max-wait = 8000
+
+flyway.url = jdbc:postgresql://localhost:5432/postgres
+#flyway.schemas = USERSERVICE
+flyway.user = postgres
+flyway.password = postgres
